# src/serverBuilder.ts
@@ -4,13 +4,17 @@ import compression from 'compression';
 import { OpenapiViewerRouter, OpenapiRouterConfig } from '@map-colonies/openapi-express-viewer';
 import { getErrorHandlerMiddleware } from '@map-colonies/error-express-handler';
 import { middleware as OpenApiMiddleware } from 'express-openapi-validator';
+import getStorageExplorerMiddleware from '@map-colonies/storage-explorer-middleware';
 import { inject, injectable } from 'tsyringe';
 import { Logger } from '@map-colonies/js-logger';
 import httpLogger from '@map-colonies/express-access-log-middleware';
 import { SERVICES } from './common/constants';
 import { IConfig } from './common/interfaces';
-import { RESOURCE_NAME_ROUTER_SYMBOL } from './resourceName/routes/resourceNameRouter';
-import { ANOTHER_RESOURECE_ROUTER_SYMBOL } from './anotherResource/routes/anotherResourceRouter';
+import { LAYERS_ROUTER_SYMBOL } from './layers/routes/layersRouter';
+import { TASKS_ROUTER_SYMBOL } from './tasks/routes/tasksRouter';
+import { TOC_ROUTER_SYMBOL } from './toc/routes/tocRouter';
+import { makeInsensitive } from './utils/stringCapitalizationPermutations';
+
 
 @injectable()
 export class ServerBuilder {
@@ -19,8 +23,9 @@ export class ServerBuilder {
   public constructor(
     @inject(SERVICES.CONFIG) private readonly config: IConfig,
     @inject(SERVICES.LOGGER) private readonly logger: Logger,
-    @inject(RESOURCE_NAME_ROUTER_SYMBOL) private readonly resourceNameRouter: Router,
-    @inject(ANOTHER_RESOURECE_ROUTER_SYMBOL) private readonly anotherResourceRouter: Router
+    @inject(LAYERS_ROUTER_SYMBOL) private readonly layersRouter: Router,
+    @inject(TASKS_ROUTER_SYMBOL) private readonly tasksRouter: Router,
+    @inject(TOC_ROUTER_SYMBOL) private readonly tocRouter: Router
   ) {
     this.serverInstance = express();
   }
@@ -40,8 +45,9 @@ export class ServerBuilder {
   }
 
   private buildRoutes(): void {
-    this.serverInstance.use('/resourceName', this.resourceNameRouter);
-    this.serverInstance.use('/anotherResource', this.anotherResourceRouter);
+    this.serverInstance.use('/layers', this.layersRouter);
+    this.serverInstance.use('/tasks', this.tasksRouter);
+    this.serverInstance.use('/toc', this.tocRouter);
     this.buildDocsRoutes();
   }
 
@@ -57,9 +63,30 @@ export class ServerBuilder {
     const ignorePathRegex = new RegExp(`^${this.config.get<string>('openapiConfig.basePath')}/.*`, 'i');
     const apiSpecPath = this.config.get<string>('openapiConfig.filePath');
     this.serverInstance.use(OpenApiMiddleware({ apiSpec: apiSpecPath, validateRequests: true, ignorePaths: ignorePathRegex }));
+    this.serverInstance.enable('trust proxy'); // to provide real protocol from controller
+    this.filePickerHandlerMiddleware();
   }
 
   private registerPostRoutesMiddleware(): void {
     this.serverInstance.use(getErrorHandlerMiddleware());
+  }
+
+  private filePickerHandlerMiddleware(): void {
+    const physicalDirPath = this.config.get<string>('layerSourceDir');
+    const displayNameDir = this.config.get<string>('displayNameDir');
+    const mountDirs = [
+      {
+        physical: physicalDirPath,
+        displayName: displayNameDir,
+        includeFilesExt: this.getFileExtensions(),
+      },
+    ];
+    this.serverInstance.use(getStorageExplorerMiddleware(mountDirs, this.logger as unknown as Record<string, unknown>));
+  }
+
+  private getFileExtensions(): string[] {
+    const extensionsStr = this.config.get<string>('validFileExtensions');
+    const extensions = extensionsStr.split(',').map((ext) => ext.trim());
+    return makeInsensitive(...extensions);
   }
 }
